@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2013,v 1.229 2013/01/20 19:55:11 jakllsch Exp $
+$NetBSD: CHANGES-2013,v 1.230 2013/01/20 20:11:16 ryoon Exp $
 
 Changes to the packages collection and infrastructure in 2013:
 
@@ -264,6 +264,9 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated www/py-werkzeug to 0.8.3nb1 [kleink 2013-01-16]
 	Updated www/drupal6 to 6.28 [taca 2013-01-17]
 	Updated www/drupal7 to 7.19 [taca 2013-01-17]
+	Added meta-pkgs/bulk-small version 20130113 [dholland 2013-01-17]
+	Added meta-pkgs/bulk-medium version 20130113 [dholland 2013-01-17]
+	Added meta-pkgs/bulk-large version 20130113 [dholland 2013-01-17]
 	Updated www/ruby-rack-protection to 1.3.2 [taca 2013-01-17]
 	Updated www/ruby-sinatra to 1.3.3nb1 [taca 2013-01-17]
 	Updated lang/php54 to 5.4.11 [taca 2013-01-17]
@@ -309,3 +312,4 @@ Changes to the packages collection and infrastructure in 2013:
 	Updated devel/java-subversion to 1.6.20 [ryoon 2013-01-20]
 	Updated graphics/darktable to 1.1.2 [jakllsch 2013-01-20]
 	Updated audio/opus-tools to 0.1.6 [ryoon 2013-01-20]
+	Updated meta-pkgs/bulk-small to 20130120 [dholland 2013-01-20]
